fixed spacing

--- a/frontend/src/components/HomePage/Profiles/profiles.module.css
+++ b/frontend/src/components/HomePage/Profiles/profiles.module.css
@@ -26,11 +26,7 @@
 
 .user-details{
     display: flex;
-}
-
-.pfp {
-    width: 160px;
-    height: 160px;
+    margin-left: auto;
 }
 
 .row1 {
@@ -73,6 +69,7 @@
 .skills li {
     background-color: #FAAA8D;
     padding: 5px;
+    text-wrap: pretty;
 }
 
 .bio {
